<resources>
    <string name="app_name">Help Health</string>
    <string name="email">Email</string>
    <string name="log_in">Log-in</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account_yet_click_here_to_register">Don\'t have an account yet? Click here to register.</string>
    <string name="sign_up">sign up</string>
    <string name="firstname_lastname_mi_juan_dela_cruz_p">Firstname Lastname, MI (Juan Dela Cruz, P)</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">already have an account? login here</string>
    <string name="e_mail">E-mail</string>
    <string name="Password">Password</string>
    <string name="welcome_name">Welcome, Name</string>
    <string name="welcome_firstname_lastname">Welcome, Firstname Lastname</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_donate">Donate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>