<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/d2"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/loginCardView"
        android:layout_width="355dp"
        android:layout_height="400dp"
        android:layout_marginTop="-30dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardBackgroundColor="#CCFFFFFF">

        <LinearLayout
            android:layout_width="353dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="LOGIN"
                android:textColor="#478377"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_marginBottom="70dp"
                app:layout_constraintBottom_toTopOf="@+id/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                />

            <EditText
                android:id="@+id/email"
                android:layout_width="313dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext_bg"
                android:hint="@string/e_mail"
                android:inputType="textEmailAddress"
                android:textColorHint="#37474F"
                tools:ignore="TextContrastCheck" />

            <RelativeLayout
                android:id="@+id/passwordLayout"
                android:layout_width="313dp"
                android:layout_height="40dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/rounded_edittext_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintVertical_bias="0.111">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:textColorHint="#37474F"
                    />

                <ImageView
                    android:id="@+id/passwordToggle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/eyeclose" />
            </RelativeLayout>


            <TextView
                android:id="@+id/toSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="55dp"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_yet_click_here_to_register"
                android:textColor="#212121" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="89dp"
        android:layout_height="74dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon" />

    <Button
        android:id="@+id/signUpButtn"
        android:layout_width="116dp"
        android:layout_height="57dp"
        android:backgroundTint="#478477"
        android:text="@string/sign_in"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>
